# GitUltra

./: .editorconfig  .env  .gitignore  .rustfmt.toml  Cargo.toml  cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  to.ps1
.cargo/: config.toml
.github/workflows/: github-actions.yml
apps/core/: Cargo.toml  tauri.conf.json
apps/core/capabilities/: default.json
apps/core/src/: lib.rs  shortcuts.rs  store.rs
apps/core/src/commands/: mod.rs
apps/core/src/store/: mod.rs
apps/desktop/: package.json  svelte.config.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/ui/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
apps/ui/src/: app.css  app.html  hooks.client.ts  hooks.server.ts
apps/ui/src/lib/: git.ts  graph.ts  index.ts  menu.svelte  utils.ts
apps/ui/src/lib/components/commit_graph/: commit-graph.svelte  graphLayout.ts  index.ts
apps/ui/src/lib/components/repotabs/: index.ts  repotabs.svelte
apps/ui/src/routes/: +layout.svelte  +page.svelte
apps/ui/src/routes/(components)/: themetoggler.svelte
apps/ui/src/routes/dashboard/: +layout.server.ts  +page.svelte
apps/ui/src/routes/home/: +page.server.ts  +page.svelte
apps/ui/src/routes/home/(components)/: mail-list.svelte  mail.svelte
apps/ui/src/routes/music/: +page.svelte
apps/ui/src/routes/music/(components)/: album-artwork.svelte  podcast-empty-placeholder.svelte
apps/ui/src/routes/repo/[slug]/: +page.svelte  +page.ts
apps/ui/src/routes/sentry-example/: +page.svelte
docs/plans/: commit-graph-2d-migration.md  frontend-integration-investigation.md  migration-blueprint.md  rspc-migration-guide.md
