[workspace]
members = [ "apps/core", "packages/core-lib", "packages/schemas"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/metratrj/GitUltra"

[profile.dev]
codegen-units = 256
opt-level = 0

[profile.dev-debug]
inherits = "dev"
debug = "full"
lto = "off"

# Optimize release builds
[profile.release]
codegen-units = 1        # Compile crates one after another so the compiler can optimize better
lto           = true     # Enables link to optimizations
opt-level     = "s"      # Optimize for binary size
panic         = "unwind" # Sadly we need unwind to avoid unexpected crashes on third party crates
strip         = true     # Remove debug symbols


[workspace.dependencies]
git2 = { version = "0.20.0" }
tauri = { version = "2.3.1"}
tauri-build = { version = "2.0.6" }
tauri-plugin-log = "2.3.1"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-global-shortcut = "2.2.0"
specta = "=2.0.0-rc.22"
tauri-specta = { version = "=2.0.0-rc.21" }
specta-typescript = "=0.0.9"
redb = "=2.4.0"
flatbuffers = "=25.2.10"