[package]
name = "GitUltra"
version = "0.1.0"
description = "A git client"
authors = ["Metratrj"]
license = "https://github.com/metratrj/GitUltra"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"
specta = "=2.0.0-rc.22"
tauri-specta = { version = "=2.0.0-rc.21", features = ["javascript", "typescript", "derive"] }
specta-typescript = "0.0.9"
gitultra-schemas = { path = "../../packages/schemas"}
core-lib = { path = "../../packages/core-lib"}
base64.workspace = true
rand.workspace = true
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
openssl-sys = { version = "0.9.106", features = ["vendored"] }
tauri-plugin-store = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2.2.0"
tauri-plugin-global-shortcut = "2"
